[gd_scene load_steps=5 format=2]

[ext_resource path="res://goal.png" type="Texture" id=1]
[ext_resource path="res://Goal.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 31.3365

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Goal" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AppearTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotate = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Goal_body_entered"]
[connection signal="tween_completed" from="AppearTween" to="." method="_on_AppearTween_tween_completed"]
